# JoystickGremlin

./: .gitignore  .qmllint.ini  HA-Switch_Mode_README.md  README  README.md  _config.yml  checklist.md  config_ha_jg.py.example  console_only.py  deploy.bat  feed.xml  generate_wix.py  index.html  jg_qml.py  joystick_gremlin.py  joystick_gremlin.spec  layout.xml  pyproject.toml  qml_notes.md  requirements.txt  resources.py  resources.qrc  setup.py  tags  ui_about.ui  ui_gremlin.py  ui_gremlin.ui  ui_widgets.py  wix_data.p
_includes/: download.html  footer.html  head.html
_layouts/: default.html
about/: about.html  joystick_gremlin.html  mako.html  modernuiicons.html  pyhook.html  pyqt.html  pysdl2.html  pywin32.html  qt5.html  reportlab.html  sdl2.html  third_party_licenses.html  vjoy.html
action/: __init__.py  common.py  macro.py  mode_control.py  pause_resume.py  remap.py  response_curve.py  text_to_speech.py
action_plugins/: __init__.py  common.py
changelog/: index.html
container_plugins/: __init__.py
css/: override.css
custom_modules/: index.html  keyboard_throttle.py  mode_switching.py  precision_mode.py  response_curve.py
dill/: __init__.py
doc/: Makefile  getting_started.html  hints.csv  make.bat
download/: index.html
examples/: index.html
exporter_plugins/: README.md  clod-export.py  xplane11-export.py
faq/: index.html
gremlin/: __init__.py  actions.py  base_classes.py  cheatsheet.py  clipboard.py  code_generator.py  code_runner.py  common.py  config.py  control_action.py  cubic_spline.py  documenter.py  error.py  event_handler.py  (+37 more)
(+477 files in other folders)
